[package]
name = "erl_dist"
version = "0.6.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Rust Implementation of Erlang Distribution Protocol"
homepage = "https://github.com/sile/erl_dist"
repository = "https://github.com/sile/erl_dist"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/erl_dist"}

[dependencies]

[dev-dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
serde_json = "1"
smol = "1"
